...
  bool translateToSunda = false;

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text('Translate'),
      ),
      body: _buildList(),
    );
  }

  Widget _buildList() {
...
                borderRadius: BorderRadius.circular(10.0),
                side: BorderSide(
                  color: Colors.blue,
                  width: 2,
                )),
            child: TextField(
              key: Key("indonesia"),
              controller: _translate,
              style: const TextStyle(
                fontSize: 20,
              ),
              onChanged: (text) {
                _translateText(text);
...
