...
      ),
      body: Column(
        children: [
          Padding(
            padding: const EdgeInsets.all(8.0),
            child: TextField(
              key: Key("kamusSrc"),
              controller: _searchController,
              onChanged: _filterKamus,
              decoration: InputDecoration(
                labelText: "Cari Arti",
                prefixIcon: Icon(Icons.search),
              ),
...
