...
      ),
      body: Column(
        children: [
          Padding(
            padding: const EdgeInsets.all(8.0),
            child: TextField(
              key: Key("peribahasaSrc"),
              controller: _searchController,
              onChanged: _filterPeribahasa,
              decoration: InputDecoration(
                labelText: "Cari Peribahasa",
                prefixIcon: Icon(Icons.search),
              ),
...
